# LifeGame

./: .gitignore  CMakeLists.txt  LifeGame  Makefile  README.md  main.cpp  screen.cpp  screen.h
SDL2/lib/: libSDL2-2.0.0.dylib  libSDL2_image-2.0.0.dylib  libSDL2_ttf-2.0.0.dylib
SDL2/lib/cmake/SDL2_image/: sdl2_image-config.cmake
SDL2/lib/cmake/SDL2_ttf/: sdl2_ttf-config.cmake
SDL2/lib/pkgconfig/: sdl2.pc
cmake_modules/: FindSDL2_image.cmake
lib/cmake/SDL2_image/: sdl2_image-config-version.cmake
lib/pkgconfig/: SDL2_image.pc
scripts/: GlobalData.h  PixelWindow.cpp  PixelWindow.h  Texture.cpp  Texture.h  Window.cpp  Window.h  main.cpp
